feat: Adds new endpoint to get the user's book count on the different book collections
