# internal/routes/routes.go
@@ -48,6 +48,7 @@ func SetupRouter(app *app.Application) *gin.Engine {
 		auth.DELETE("/chapters/:chapter_id/comments/:id", app.CommentHandler.HandleDeleteCommentById)
 		auth.POST("/users/:user_id/books", app.UserBooksHandler.HandleAddUserBook)
 		auth.GET("/users/:user_id/books", app.UserBooksHandler.HandleGetUserBooks)
+		auth.GET("/users/{user_id}/books/stats", app.UserBooksHandler.HandleGetUserBooksStats)
 		auth.PATCH("/user-books/:id", app.UserBooksHandler.HandleUpdateUserBook)
 		auth.DELETE("/user-books/:id", app.UserBooksHandler.HandleDeleteUserBook)
 		auth.GET("/api/books", app.GoogleBookAPIHandler.HandleSearchGoogleBooks)
